@@ -17,6 +17,12 @@ arm926t-defconfig-4.2.4
 	due to improperly positioned sections and can probably fixed
 	by changing the architectures .ldscript file.
 
+cortexm3-defconfig-4.3.3
+	Builds an ARM toolchain for the Cortex-M3 using gcc 4.3.3.
+	This configuration builds both gcc and g++.
+
+	NOTE:  This configuration is untested as of this writing.
+
 bfin-defconfig-4.2.4
 	Builds an Blackfin toolchain using gcc 4.2.4
 
